[package]
name = "c-types"
license = "MIT"
version = "2.0.2"
authors = ["David Hotham"]
description = """
Re-exports of cross-platform types, gathered from libc and winapi
"""
repository = "https://github.com/dimbleby/rust-c-types"
documentation = "https://docs.rs/c-types"
readme = "README.md"
keywords = ["libc", "winapi"]

[dependencies]
libc = "0.2.21"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.3", features = ["winsock2", "ws2ipdef", "ws2tcpip"] }
