[package]
name = "c-types"
license = "MIT"
version = "3.0.1"
authors = ["David Hotham"]
description = """
Re-exports of cross-platform types, gathered from libc and winapi
"""
repository = "https://github.com/dimbleby/rust-c-types"
documentation = "https://docs.rs/c-types"
readme = "README.md"
keywords = ["libc", "winapi"]

[dependencies]
libc = "0.2.21"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_Networking_WinSock"] }
