[package]
name = "c-types"
license = "MIT"
version = "4.0.0"
authors = ["David Hotham"]
description = """
Re-exports of cross-platform types, gathered from libc and winapi
"""
repository = "https://github.com/dimbleby/rust-c-types"
documentation = "https://docs.rs/c-types"
readme = "README.md"
edition = "2024"
keywords = ["libc", "winapi"]

[dependencies]
libc = "0.2.21"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60.1", features = ["Win32_Networking_WinSock"] }
